ignite-gg-11650 control sh update